--- a/index.html
+++ b/index.html
@@ -3,8 +3,39 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title> Tshirt </title>
+<style>
+  body{
+  background-color: #999;
+  border-width: 1px solid;
+}
+
+b,h2{
+  color:#000;
+  text-decoration: solid;
+  background-color:red;
+  border-radius:20px;
+  font-size: 20px;
+
+
+}
+
+input{
+  width: 70%;
+  height:10%;
+  border-radius: 20px;
+}
+
+textarea{
+  border-radius: 10px;
+}
+#input{
+  width: 30%;
+  height: 30%;
+  font-size: 20px;
+}
+</style>
 </head>
-<body bgcolor="#FDF2E9" align=center >]
+<body  align=center >]
   <img src="cloth2.JPG" alt="Clothes" width="100%" height="400">
   <br>
   <h2 align=center>Order for Customized T-shirts</h2>
@@ -62,7 +93,7 @@
     <input type="text" id="Postal / Zip Code" name="Postal / Zip Code"><br><br>
    <br>
   <br>
-<input type="submit" value="Submit">
+<input id="input" type="submit" value="Submit">
 </form>
 </body>
 </html>
