--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script defer data-domain="sw-757.github.io/t-shirt-form-ex2-p2" src="https://plausible.io/js/plausible.js"></script>
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title> Tshirt </title>
 <style>
